Fix alignment of items. Add space for the first row of filters in simple queries.

--- a/src/app/advanced/advanced-view/advanced-view.component.scss
+++ b/src/app/advanced/advanced-view/advanced-view.component.scss
@@ -72,7 +72,7 @@ h2 {
   background-color: #EDC7B7;
   width: 100%;
   height: 7%;
-  padding: 5px 0 5px 0;
+  padding: 5px 0 0 0;
 }
 
 .scrollable {
