--- a/src/app/shared/components/search-filter/search-filter/search-filter.component.scss
+++ b/src/app/shared/components/search-filter/search-filter/search-filter.component.scss
@@ -11,3 +11,9 @@
     margin: 0 !important;
 }
 
+.chip-wrapper {
+    margin-left: 10%;
+    min-height: 80px;
+    width: 80%;
+}
+
