--- a/src/app/shared/components/table/hephaestus-table/hephaestus-table.component.scss
+++ b/src/app/shared/components/table/hephaestus-table/hephaestus-table.component.scss
@@ -3,7 +3,6 @@
 .table-container {
   width: 80%;
   height: 700px;
-  margin-top: 20px;
   margin-left: 10%;
   text-align: center;
   display: flex;
